<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_container_three"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/third_layout_shape">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/third_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:text="@string/third_layout_title"
        android:textColor="#7B8591"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/third_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/third_layout_subtitle"
        android:textColor="#7B8591"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/third_title"
        app:layout_constraintStart_toStartOf="@+id/third_title"
        app:layout_constraintTop_toBottomOf="@+id/third_title"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bank_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="2dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/third_subtitle"
        app:layout_constraintVertical_bias="0.0">


        <androidx.cardview.widget.CardView
            android:id="@+id/bank_logo_card_view"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="24dp"
            app:cardBackgroundColor="#fff"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/bank_logo_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/circular_bar" />
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bank_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/bank_name"
            android:textColor="#C1B7BF"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/account_number_text_view"
            app:layout_constraintStart_toEndOf="@id/bank_logo_card_view"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/account_number_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/account_number"
            android:textColor="#C1B7BF"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/bank_title_text_view"
            app:layout_constraintTop_toBottomOf="@+id/bank_title_text_view" />


        <androidx.cardview.widget.CardView
            android:id="@+id/check_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="20dp"
            android:elevation="4dp"
            app:cardCornerRadius="32dp"
            app:cardBackgroundColor="#3C414F"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" >


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/bank_check_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:background="#00000000"
                android:src="@drawable/ic_baseline_done_24" />

        </androidx.cardview.widget.CardView>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/change_acc_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="110dp"
        android:background="@drawable/text_button_bg"
        android:paddingHorizontal="14dp"
        android:paddingVertical="8dp"
        android:text="@string/change_account"
        android:textColor="#C1B7BF"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/third_bottom_sheet_cta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bank_name_layout"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/third_bottom_sheet_cta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/cta_style"
        android:padding="20dp"
        android:text="@string/tap_for_1_click_kyc"
        android:textAlignment="center"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>