<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/first_layout_shape"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/close_icon">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/toggle_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_baseline_arrow_down_24"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/first_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:text="@string/first_layout_title"
        android:textColor="#7B8591"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/toggle_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/first_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/first_layout_subtitle"
        android:textColor="#7B8591"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/first_title"
        app:layout_constraintStart_toStartOf="@+id/first_title"
        app:layout_constraintTop_toBottomOf="@+id/first_title"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/background_detail_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@id/toggle_icon"
        android:orientation="vertical"
        android:visibility="invisible"
        >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bg_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit_amount"
            android:textColor="#7B8591"
            android:textSize="10sp"
            android:layout_gravity="start"
            tools:ignore="SmallSp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bg_amount_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="1,50,000"
            android:textColor="#7B8591"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="start" />

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/first_bottom_sheet_cta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/cta_style"
        android:padding="20dp"
        android:text="@string/proceed_to_emi_selection"
        android:textAlignment="center"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="25dp"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:cardCornerRadius="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintBottom_toTopOf="@id/first_bottom_sheet_cta"
        app:layout_constraintTop_toBottomOf="@+id/first_subtitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="24dp"
                android:layout_gravity="center"
                android:src="@drawable/circular_bar" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:textAlignment="center"
                android:layout_marginHorizontal="24dp"
                android:textSize="14sp"
                android:text="@string/image_text" />
        </LinearLayout>



    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>