<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#9b9a9e"
            app:cardCornerRadius="16dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:background="#00000000">

                <androidx.cardview.widget.CardView
                    android:id="@+id/check_icon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:elevation="4dp"
                    app:cardCornerRadius="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/checkbox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:background="#00000000"
                        android:src="@drawable/ic_baseline_done_24"
                        android:visibility="gone" />

                </androidx.cardview.widget.CardView>


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_view_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/rupees"
                    android:textColor="#C1B7BF"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/check_icon"
                    app:layout_constraintTop_toBottomOf="@id/check_icon" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/materialTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="/mo"
                    android:textColor="#C1B7BF"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="2dp"
                    app:layout_constraintVertical_bias="1.0"
                    app:layout_constraintBottom_toBottomOf="@+id/text_view_amount"
                    app:layout_constraintStart_toEndOf="@+id/text_view_amount"
                    app:layout_constraintTop_toTopOf="@+id/text_view_amount" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/duration_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/for_months"
                    android:textColor="#C1B7BF"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/text_view_amount"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_amount" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="20dp"
                    android:text="see calculations"
                    android:textColor="#C1B7BF"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/duration_text_view"
                    app:layout_constraintTop_toBottomOf="@+id/duration_text_view" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/recommended_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:background="@drawable/chip_bg"
            android:paddingHorizontal="10dp"
            android:paddingVertical="3dp"
            android:text="@string/recommended"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:elevation="10dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
